[package]
name = "ntfy-send"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
